# Legalassist-AI

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAMS.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  LANGUAGE_CONVERSION_FIX.md  README.md  analytics_engine.py  app.py  app_fixed.py  app_integrated.py  auth.py  case_manager.py  cli.py  core.py  database.py  deadline_cli.py  docker-compose.yml  legal_aid_directory.json  legalassist.db  logging_config.py  modify_pdf.py  notification_service.py  notifications_ui.py  pdf_exporter.py  pyproject.toml  requirements.txt  scheduler.py  test_app.py
.github/workflows/: NSOC-label.yml  NsocLabeller.yml  tests.yml
.streamlit/: config.toml  secrets.toml
core/: __init__.py  all_translations.json  app_utils.py
pages/: 0_Home.py  0_Login.py  1_Analytics_Dashboard.py  1_Deadlines.py  1_My_Cases.py  2_Appeal_Estimator.py  2_Case_Details.py  2_History.py  3_Deadline_Tracker.py  3_Report_Outcome.py  3_Settings.py  __init__.py
scratch/: test_leakage.py
scripts/: generate_sample_analytics_data.py  generate_test_data.py
tests/: README.md  test_analytics_engine.py  test_app.py  test_app_core.py  test_cli_ocr.py  test_database_extended.py  test_metadata.json  test_notification_service_extended.py  test_notifications.py  test_remedies.py  test_remedies_parser.py  test_scheduler_comprehensive.py  test_summary_parser.py
